Added taglib that provides mail:newLine tag for working around line break problems in GSP body views with Grails 1.0.3 or earlier

--- a/plugin.xml
+++ b/plugin.xml
@@ -22,5 +22,6 @@ sendMail {
     <resource>DataSource</resource>
     <resource>UrlMappings</resource>
     <resource>org.grails.mail.MailService</resource>
+    <resource>org.grails.mail.PlainTextMailTagLib</resource>
   </resources>
 </plugin>
