Fixed problem with not thread bound request when sending mail outside of a controller (eg from a job or service)

--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 #Do not edit app.grails.* properties, they may change automatically. DO NOT put application configuration in here, it is not the right place!
 #Thu Apr 17 20:00:38 BST 2008
-app.grails.version=1.0.3
+app.grails.version=1.1-SNAPSHOT
 app.name=Mail
