--- a/.classpath
+++ b/.classpath
@@ -18,8 +18,6 @@
 <classpathentry kind="var" path="GRAILS_HOME/lib/ant-nodeps-1.7.0.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/ant-trax.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/antlr-2.7.6.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/lib/aspectjrt.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/lib/aspectjweaver.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/backport-util-concurrent-3.0.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/cglib-nodep-2.1_3.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/commons-beanutils-1.7.0.jar" />
@@ -33,11 +31,10 @@
 <classpathentry kind="var" path="GRAILS_HOME/lib/commons-lang-2.4.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/commons-pool-1.2.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/commons-validator-1.3.0.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/lib/dom4j-1.6.1.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/ehcache-1.5.0.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/ejb3-persistence-3.3.0.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/gant_groovy1.6-1.6.0.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/lib/groovy-all-1.6.3-SNAPSHOT.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/lib/groovy-all-1.6.3.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/hibernate-annotations-3.3.0.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/hibernate-commons-annotations-3.3.0.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/hibernate3-3.3.1.jar" />
@@ -46,7 +43,6 @@
 <classpathentry kind="var" path="GRAILS_HOME/lib/jasper-compiler-5.5.15.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/jasper-compiler-jdt-5.5.15.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/jasper-runtime-5.5.15.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/lib/javassist-3.4.GA.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/jcl-over-slf4j-1.5.6.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/jetty-6.1.14.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/jetty-naming-6.1.14.jar" />
@@ -80,14 +76,14 @@
 <classpathentry kind="var" path="GRAILS_HOME/lib/start.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/svnkit-1.2.0.jar" />
 <classpathentry kind="var" path="GRAILS_HOME/lib/xpp3_min-1.1.3.4.O.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-bootstrap-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-core-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-crud-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-gorm-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-resources-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-scripts-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-spring-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-test-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-web-1.1.1-SNAPSHOT.jar" />
-<classpathentry kind="var" path="GRAILS_HOME/dist/grails-webflow-1.1.1-SNAPSHOT.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-bootstrap-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-core-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-crud-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-gorm-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-resources-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-scripts-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-spring-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-test-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-web-1.1.1.jar" />
+<classpathentry kind="var" path="GRAILS_HOME/dist/grails-webflow-1.1.1.jar" />
 </classpath>
