--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #utf-8
-#Tue May 12 16:01:58 BST 2009
-app.grails.version=1.1.1-SNAPSHOT
-plugins.hibernate=1.1.1-SNAPSHOT
+#Mon Jun 15 21:14:19 BST 2009
+app.grails.version=1.1.1
+plugins.hibernate=1.1.1
 app.name=Mail
