--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #utf-8
-#Mon Jun 29 17:00:59 BST 2009
+#Wed Jul 01 11:25:19 EDT 2009
 app.grails.version=1.1.1
 plugins.hibernate=1.1.1
 app.name=Mail
