--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,4 @@
 #utf-8
 #Wed Jul 01 11:25:19 EDT 2009
-app.grails.version=1.1.1
-plugins.hibernate=1.1.1
+app.grails.version=1.2-SNAPSHOT
 app.name=Mail
