--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-#utf-8
-#Wed Jul 01 11:25:19 EDT 2009
-app.grails.version=1.3.4
+#Grails Metadata file
+#Wed Dec 01 17:24:10 CET 2010
+app.grails.version=1.3.5
 app.name=Mail
