--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Wed Dec 01 17:24:10 CET 2010
+#Tue Jan 04 10:32:28 EST 2011
 app.grails.version=1.3.5
 app.name=Mail
+plugins.tomcat=1.3.5
