updated app.name to conventional ‘grails-mail’

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Tue Jan 04 10:32:28 EST 2011
 app.grails.version=1.3.5
-app.name=Mail
+app.name=grails-mail
 plugins.tomcat=1.3.5
