--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Tue Jan 04 10:32:28 EST 2011
-app.grails.version=1.3.5
+#Tue Dec 20 10:15:07 GMT 2011
+app.grails.version=1.3.7
 app.name=grails-mail
 plugins.tomcat=1.3.5
