--- a/test/projects/basic/application.properties
+++ b/test/projects/basic/application.properties
@@ -1,10 +1,7 @@
 #Grails Metadata file
-#Wed Dec 21 11:04:20 GMT 2011
-app.grails.version=1.3.5
+#Wed Dec 21 14:03:17 GMT 2011
+app.grails.version=1.3.7
 app.name=basic
 app.servlet.version=2.4
 app.version=0.1
-plugins.greenmail=1.2.2
-plugins.hibernate=1.3.5
-plugins.spock=0.5-groovy-1.7-SNAPSHOT
-plugins.tomcat=1.3.5
+plugins.svn=1.0.1
