--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,10 @@ buildscript {
     }
     repositories {
         mavenLocal()
+        mavenCentral()
+        jcenter()
         maven { url "https://repo.grails.org/grails/core" }
+        maven { url "https://repo.grails.org/grails/repo" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
@@ -42,7 +45,9 @@ targetCompatibility = 1.7
 
 repositories {
   mavenLocal()
+  jcenter()
   mavenCentral()
+
   maven { url "https://repo.grails.org/grails/core" }
 }
 
