--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ dependencies {
   provided "org.springframework.boot:spring-boot-starter-tomcat"
 
   provided "org.grails:grails-web-boot"
-  provided "org.grails:grails-dependencies"
+  compile "org.grails:grails-dependencies"
   provided 'javax.servlet:javax.servlet-api:3.1.0'
 
   testCompile "org.grails:grails-plugin-testing"
