--- a/build.gradle
+++ b/build.gradle
@@ -59,14 +59,17 @@ dependencyManagement {
 }
 
 dependencies {
-  provided 'org.springframework.boot:spring-boot-starter-logging'
-  provided "org.springframework.boot:spring-boot-starter-actuator"
-  provided "org.springframework.boot:spring-boot-autoconfigure"
-  provided "org.springframework.boot:spring-boot-starter-tomcat"
 
-  provided "org.grails:grails-web-boot"
+  //FIXME: THese should be of type provided when fixed
+  compile 'org.springframework.boot:spring-boot-starter-logging'
+  compile "org.springframework.boot:spring-boot-starter-actuator"
+  compile "org.springframework.boot:spring-boot-autoconfigure"
+  compile "org.springframework.boot:spring-boot-starter-tomcat"
+
+  compile "org.grails:grails-web-boot"
   compile "org.grails:grails-dependencies"
-  provided 'javax.servlet:javax.servlet-api:3.1.0'
+  compile 'javax.servlet:javax.servlet-api:3.1.0'
+  //End FIXME
 
   testCompile "org.grails:grails-plugin-testing"
   testCompile "com.icegreen:greenmail:1.4.0"
