--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ jdk:
 - openjdk7
 before_script:
 - rm -rf target
-script: ./travis-build.sh
+script: "./travis-build.sh"
 env:
   global:
   - GIT_NAME="Jeff Scott Brown"
-  - GIT_EMAIL="jeff@jeffandbetsy.net"
-  - secure: ghezWIO/n18JeNIR01xQwhd/T3WRHpc8ktl9KZCq41WeI2PKFoRBVsWpNZXa/Kt/7aXgTVD8CLUtvKNZlb239WVQDrFIoavFKcyPbtgGaJYJ5IQV/T5/a8ERVK3qQEgfCCMtBUedMhbDFeh1dfsE579Je98UbFhQK5pUB1kqF5Y=
-  - secure: DMPBvolzED1ru0f2ZrG1ZFoC7klH/x45sY0lNE+M6pPSvDSNX4caoHqgyw0iJFvjAqclrWMWG4i5Sws9rlk6eEmH8Q32K/kGAdpNtGt3gvfyXiumpjqluDMifS5WFkTeerMlf6zR8pLIuY5hQ3wxoB7+4pvuuhqqFyTiqENOWp0=
-  - secure: gePUtjNko89/kmEyOYcQGwhD0TW7jfrmpEYIUJz2L0L13J9JrrFKQFq7QB7uy3HOn1QkfzPUgECCMyfct7rzK25oNdIrG4VHPnNKJxUA1EcPs4h+1gXApmom1FWhmmYA9CG/GL3wT2ExikXHPsK0O0B/OQ2O0xlTxVHXK87L4V4=
-  - secure: dTZV67vqc9VxVA9+LG6sfAQqC28SRF4k794mLxYbX/ovh1xZCI7ToqZUKBeNbpgVunqCcidw6MRRWNOo5HTAom6TXDAanO/8oI3XjTdkHYQ93LNg2vU1gIE62WO6LmwOHqSJWUqEEoyvQJswwViR5sb7ZcVUzrFyFjuPSc4fkjA=
-  - secure: WJg8wCxGOQyoJGtD6rnXBwp/Qn6nN99vR0ibImjOLeBN734Ycwn8Yq17MGoP/TCcap0AU4pg7CraRQDkw06ZK17rGxVXRP/xxlwmwL3/hRpq+luWV2BKlWL1z0Snvalnyku3vNxkIl6edgPxLjciD3JZiKXs2T1i8RjHW9ZxQ7c=
+  - GIT_EMAIL="brownj@objectcomputing.com"
+  - secure: cCZD9HmATbdJDohqSUVTk/2J6WgcsrRoUpEynwBOx2zc7n95XB48B+hhtOEJ998B33Pky4u5gb04VpaSXJqOambmVHreGwYl1OtA3QWz9tXuohgnSyP8qdp6Dzo3Jb+91yURQAErftvZyBJo3fVANPHkaFb4L2FG+oGrWZ7KsMA=
+  - secure: IU68RJFNFmr2NA9WJUavnIK+8PESBrX7eee3Z5xQtXPMW+GcpK6Xb4jr10YmBuiLH3rWJMryTz/i2C8fLO/hxYgf6MCWI+WZHxL2KW6U6V0rdID+hH1MVVLQVpWFyOH3KOmtcLHn36Ix6ZZiNn+mjfF9ocHRCo8Jw49hr6+sQAc=
+  - secure: ePY48Cu0eV28K++86JVz0BImE4f+x2LLIPsYA7BR3lsqQJS3IheFQviJr/DpIMEtZYEC6/Pzmtl/1tpqPsIesMnEvn7Z7v230mWQW4SaXgCsD0c80rj3nPvPoPEyWpveD5+Ayo8AzkTvV/9zFlwDJloVDG5NWyTdglOlZMc4dno=
+  - secure: JmNcdO2oUyJJBLXRnoeLb1orrURKGQ2jEp8LaG2YolZDSbyoKKwNVPmymfCwCPHzdMCdspJJjRCL7O6l2J/irgG8LzsKwS6snOmeFiDq8EXCREdcMjKeVjrVUsKB0OZQpHKnmwwpEfpVlgJ5rkR5IVjTwJxRfJaCUFZSRZ5IXtI=
+  - secure: ThHW0nEmx0fyAaYzYmCC7pw6TUaZsjyA3stw9rWHC40hkRW9J/tUilzzGbqFKRu0JI/G8oOKHuJ11iYb8W7gmxAewd0KAsdxZCVU12/CxCH6TYGhiNuszuU0N4e2zRbg1jkQOicSiRmIu0klBi2//59RuyPu6oOMwyJzuWylBiM=
