Include publish gradle files

--- a/build.gradle
+++ b/build.gradle
@@ -61,3 +61,6 @@ dependencies {
     compile "javax.mail:javax.mail-api:1.6.2"
     compile "com.sun.mail:javax.mail:1.6.2"
 }
+
+apply from: "${rootProject.projectDir}/gradle/grailsPublish.gradle"
+apply from: "${rootProject.projectDir}/gradle/artifactoryPublish.gradle"
