--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - '[4-9]+.[0-9]+.x'
 env:
-  GIT_USER_NAME: puneetbehl
-  GIT_USER_EMAIL: behlp@unityfoundation.io
+  GIT_USER_NAME: grails-build
+  GIT_USER_EMAIL: grails-build@users.noreply.github.com
 
 jobs:
 
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        java: [11, 17]
+        java: [17]
 
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: gradle/wrapper-validation-action@v2
       - uses: actions/setup-java@v4
-        with: { java-version: 11, distribution: temurin }
+        with: { java-version: 17, distribution: temurin }
       - uses: gradle/actions/setup-gradle@v3
 
       - name: Build Project
