--- a/gradle/buildsrc.libs.versions.toml
+++ b/gradle/buildsrc.libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-grails-gradle-plugin = '6.2.0'
+grails-gradle-plugin = '7.0.0-SNAPSHOT'
 nexus-publish-gradle-plugin = '1.3.0'
 
 [libraries]
