--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
-grails = '6.2.0'
-grails-testing-support = '3.2.1'
-greenmail = '1.6.15'
-groovy = '3.0.21'
-gsp = '6.2.1'
-javamail = '1.6.2'
+grails = '7.0.0-SNAPSHOT'
+grails-testing-support = '4.0.0-SNAPSHOT'
+greenmail = '2.0.1'
+groovy = '4.0.23'
+gsp = '7.0.0-SNAPSHOT'
+javamail = '2.0.1'
 slf4j = '1.7.36'
-spring = '5.3.34'
-springboot = '2.7.18'
-spock = '2.3-groovy-3.0'
+spring = '6.1.13'
+springboot = '3.3.4'
+spock = '2.3-groovy-4.0'
 
 [libraries]
 grails-core = { module = 'org.grails:grails-core', version.ref = 'grails' }
@@ -18,11 +18,12 @@ grails-testing-support-web = { module = 'org.grails:grails-web-testing-support',
 grails-web-common = { module = 'org.grails:grails-web-common', version.ref = 'grails' }
 grails-web-urlmappings = { module = 'org.grails:grails-web-url-mappings', version.ref = 'grails' }
 greenmail = { module = 'com.icegreen:greenmail', version.ref = 'greenmail' }
-groovy-core = { module = 'org.codehaus.groovy:groovy', version.ref = 'groovy' }
+groovy-core = { module = 'org.apache.groovy:groovy', version.ref = 'groovy' }
 grails-docs = { module = 'org.grails:grails-docs', version.ref = 'grails' }
-groovy-templates = { module = 'org.codehaus.groovy:groovy-templates', version.ref = 'groovy' }
-javamail-api = { module = 'javax.mail:javax.mail-api', version.ref = 'javamail' }
-javamail-impl = { module = 'com.sun.mail:javax.mail', version.ref = 'javamail' }
+groovy-templates = { module = 'org.apache.groovy:groovy-templates', version.ref = 'groovy' }
+groovy-xml = { module = 'org.apache.groovy:groovy-xml', version.ref = 'groovy' }
+javamail-api = { module = 'jakarta.mail:jakarta.mail-api', version.ref = 'javamail' }
+javamail-impl = { module = 'com.sun.mail:jakarta.mail', version.ref = 'javamail' }
 slf4j-nop = { module = 'org.slf4j:slf4j-nop', version.ref = 'slf4j' }
 spring-beans = { module = 'org.springframework:spring-beans', version.ref = 'spring' }
 spring-context = { module = 'org.springframework:spring-context', version.ref = 'spring' }
