--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: "Java CI"
 on:
   push:
     branches:
@@ -6,74 +6,66 @@ on:
   pull_request:
     branches:
       - '[4-9]+.[0-9]+.x'
-env:
-  GIT_USER_NAME: grails-build
-  GIT_USER_EMAIL: grails-build@users.noreply.github.com
-
 jobs:
-
   test_project:
-    name: Test Project
+    name: "Test Project"
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
-        java: [17]
-
+        java: [17, 21]
     steps:
-      - uses: actions/checkout@v4
-      - uses: gradle/wrapper-validation-action@v2
-      - uses: actions/setup-java@v4
+      - name: "📥 Checkout repository"
+        uses: actions/checkout@v4
+      - name: "☕️ Setup JDK"
+        uses: actions/setup-java@v4
         with:
-          distribution: temurin
+          distribution: liberica
           java-version: ${{ matrix.java }}
-      - uses: gradle/actions/setup-gradle@v3
-      - name: Run tests
-        env:
-          DEVELOCITY_ACCESS_KEY: ${{ secrets.DEVELOCITY_ACCESS_KEY }}
+      - name: "🐘 Setup Gradle"
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          develocity-access-key: ${{ secrets.DEVELOCITY_ACCESS_KEY }}
+      - name: "🏃 Run tests"
         run: ./gradlew check
-
   publish_snapshot:
-    name: Build Project and Publish Snapshot release
+    name: "Build Project and Publish Snapshot release"
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
-
     steps:
-      - uses: actions/checkout@v4
-      - uses: gradle/wrapper-validation-action@v2
-      - uses: actions/setup-java@v4
-        with: { java-version: 17, distribution: temurin }
-      - uses: gradle/actions/setup-gradle@v3
-
-      - name: Build Project
-        env:
-          DEVELOCITY_ACCESS_KEY: ${{ secrets.DEVELOCITY_ACCEESS_KEY }}
+      - name: "📥 Checkout repository"
+        uses: actions/checkout@v4
+      - name: "☕️ Setup JDK"
+        uses: actions/setup-java@v4
+        with: {
+          java-version: 17,
+          distribution: liberica
+        }
+      - name: "🐘 Setup Gradle"
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          develocity-access-key: ${{ secrets.DEVELOCITY_ACCESS_KEY }}
+      - name: "🔨 Build Project"
         run: ./gradlew build
-
-      - name: Publish Snapshot version to Artifactory (repo.grails.org)
+      - name: "📤 Publish Snapshot version to Artifactory (repo.grails.org)"
         if: success()
         env:
-          DEVELOCITY_ACCESS_KEY: ${{ secrets.DEVELOCITY_ACCESS_KEY }}
           ORG_GRADLE_PROJECT_artifactoryPublishUsername: ${{ secrets.ARTIFACTORY_USERNAME }}
           ORG_GRADLE_PROJECT_artifactoryPublishPassword: ${{ secrets.ARTIFACTORY_PASSWORD }}
         run: >
           ./gradlew
           -Dorg.gradle.internal.publish.checksums.insecure=true
           publish
-
-      - name: Generate Snapshot Documentation
+      - name: "📖 Generate Snapshot Documentation"
         if: success()
-        env:
-          DEVELOCITY_ACCESS_KEY: ${{ secrets.DEVELOCITY_ACCESS_KEY }}
         run: ./gradlew docs
-
-      - name: Publish Snapshot Documentation to Github Pages
+      - name: "📤 Publish Snapshot Documentation to Github Pages"
         if: success()
         uses: micronaut-projects/github-pages-deploy-action@grails
         env:
           BRANCH: gh-pages
-          COMMIT_EMAIL: ${{ env.GIT_USER_EMAIL }}
-          COMMIT_NAME: ${{ env.GIT_USER_NAME }}
+          COMMIT_EMAIL: ${{ vars.GIT_USER_EMAIL }}
+          COMMIT_NAME: ${{ vars.GIT_USER_NAME }}
           FOLDER: build/docs/manual
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
